# minecraft-dye-search

./: .gitignore  MODULE.bazel
main/: BUILD.bazel  color.h  colorAccumulator.cc  colorAccumulator.h  main.cc  minecraftColors.h  reachabilityCalculator.cc  reachabilityCalculator.h  reachabilityInstruction.h
