load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
cc_library(
	name = "app_lib",
	srcs = glob(["**/*.cc"]),
	hdrs = glob(["**/*.h"], allow_empty = True),
    cxxopts = [
        "-std=c++17",
    ],
)
cc_binary(
	name = "app",
	deps = [":app_lib"],
	visibility = ["//visibility:public"],
)
